# ChampManager

./: .clang-format  .gitattributes  .travis.yml  CMakeLists.txt  ChampManager.pro  ChampManager.txt  README.md  appveyor.yml  appveyour.yml  main.cpp  parser.cpp  parser.h  parser_with_db.pro
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
rsc/: cm.qrc
src/: CMakeLists.txt  appdata.cpp  appdata.h  dbhelper.cpp  dbhelper.h  lapscomparewidget.cpp  lapscomparewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  parserConsts.h  resultswindow.cpp  resultswindow.h  resultswindow.ui
tests/: CMakeLists.txt  test_parser.cpp  test_parser_config.cpp  test_parser_xml.cpp  test_utility.h
tests/testsdata/: P.xml  PExpected.txt  Q.xml  QExpected.txt  R.xml  RExpected.txt  TestHDV.hdv  TestRCD.rcd  TestRCDExpected.rcd  TestUpgrades.ini  TestUpgradesExpected.ini  TestVEH.veh  TestVEHExpected.veh  testE.csv
